@@ -73,6 +73,9 @@
 # Required by Apache Arrow memory allocator to access java.nio internals
 --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
 
+# Required by org.elasticsearch.compute.data.UninitializedArrays to access jdk.internal.misc.Unsafe
+--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+
 ## heap dumps
 
 # generate a heap dump when an allocation from the Java heap fails; heap dumps
